--- a/include/product-categories.html
+++ b/include/product-categories.html
@@ -114,7 +114,7 @@
     <!-- End Latest Posts -->
 
     <!-- Widget Category -->
-    <div class="widget widget-category p-4 mb-4">
+    <!-- <div class="widget widget-category p-4 mb-4">
       <h4 class="widget-title mb-3 pb-4">Categories</h4>
       <ul class="list-unstyled widget-category-list">
         <li><a href="#"> <i class="ion-arrow-right-b"></i>Animals</a>
@@ -128,7 +128,7 @@
         <li><a href="#"><i class="ion-arrow-right-b"></i>Video</a>
         </li>
       </ul>
-    </div> <!-- End category  -->
+    </div> End category  -->
   </aside>
   <!-- <div class="product-sidebar bg-color p-4">
     <h3 class="text-white text-center py-2 text-uppercase ">Product Categories</h3>
