--- a/include/food-categories.html
+++ b/include/food-categories.html
@@ -5,7 +5,7 @@
       <h3 class="widget-title mb-3 pb-4">Our Food Catalogue</h3>
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object " href="shelf-range-super-market.php">
-          <img class="img-fluid" src="images/food-categories/unikai-mango-juice.jpg" alt="Image">
+          <img class="img-fluid" src="images/food-categories/apple.jpg" alt="Image">
         </a>
         <div class="media-body">
           <h4 class="media-heading"><a href="unikai-juice.php">Unikai Juice</a></h4>
@@ -17,7 +17,7 @@
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="cipsas-nuts.php">
-          <img class="img-fluid" src="images/food-categories/cipsas-nuts.jpg" alt="Image">
+          <img class="img-fluid" src="images/food-categories/tefos.jpg" alt="Image">
         </a>
         <div class="media-body">
           <h4 class="media-heading"><a href="cipsas-nuts.php">Cipsas Nuts</a></h4>
@@ -28,11 +28,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="frooti.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/frooti.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="frooti.php">Frooti</a></h4>
+          <h4 class="media-heading"><a href="food.php">Frooti</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
@@ -40,11 +40,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="kara-coco.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/kara-coco.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="kara-coco.php">Kara Coco</a></h4>
+          <h4 class="media-heading"><a href="food.php">Kara Coco</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
@@ -52,11 +52,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="appy-fizz.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/appy-fizz.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="appy-fizz.php">Appy Fizz</a></h4>
+          <h4 class="media-heading"><a href="food.php">Appy Fizz</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 3 Categories
           </div>
@@ -76,11 +76,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="lacasa.php">
+        <a class="pull-left mr-4 media-object" href="lacasa-dulcinea.php">
           <img class="img-fluid" src="images/food-categories/lacasa.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="lacasa.php">Lacasa Chocolate</a></h4>
+          <h4 class="media-heading"><a href="lacasa-dulcinea.php">Lacasa Chocolate</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
@@ -88,11 +88,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="pop-popcorn.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/pop-popcorn.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="pop-popcorn.php">Pop Smile Popcorn</a></h4>
+          <h4 class="media-heading"><a href="food.php">Pop Smile Popcorn</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -100,11 +100,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="euro-chips.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/euro-chips.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="euro-chips.php">Euro Chips</a></h4>
+          <h4 class="media-heading"><a href="food.php">Euro Chips</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 7 Categories
           </div>
@@ -112,22 +112,22 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="dry-cake.php">
+        <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/dry-cake.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="dry-cake.php">Dry Cake</a></h4>
+          <h4 class="media-heading"><a href="food.php">Dry Cake</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
         </div>
       </div>
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="monin-syrup.php">
+        <a class="pull-left mr-4 media-object" href="monin.php">
           <img class="img-fluid" src="images/food-categories/monin-syrup.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="monin-syrup.php">Monin Syrup</a></h4>
+          <h4 class="media-heading"><a href="monin.php">Monin Syrup</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
