--- a/css/style.css
+++ b/css/style.css
@@ -2952,3 +2952,9 @@ input[type=checkbox], input[type=radio] {
 .bg-purple{
   background-color: #82124d!important;
 }
+.table-striped thead tr{
+  background-color: #3d000a;
+}
+.table-striped thead tr th{
+  color: #fff;
+}
