--- a/include/footer.html
+++ b/include/footer.html
@@ -15,7 +15,7 @@
 					<h3 class="mb-4">Address</h3>
 					<ul class="list-inline footer-address">
 						<li class="list-inline-item">
-							<i class="ion-android-phone-portrait"></i><span>+973 345 12 123</span>
+							<i class="ion-android-phone-portrait"></i><span>+973 33 69 65 01</span>
 						</li>
 						<li class="list-inline-item">
 							<i class="ion-android-call"></i><span>+973 77 17 78 42</span>
@@ -26,6 +26,10 @@
 						<li class="list-inline-item">
 							<i class="ion-email"></i>
 							sales@kingpackgroup.com
+						</li>
+						<li class="list-inline-item">
+							<i class="ion-email"></i>
+							info@kingpackgroup.com
 						</li>
 						<li class="list-inline-item">
 							<i class="ion-ios-location"></i>
@@ -81,10 +85,10 @@
 
 					<ul class="list-inline footer-socials">
 						<li class="list-inline-item">
-							<a href="https://www.facebook.com/KINGPACKGROUP/"><i class="ion-social-facebook"></i></a>
+							<a href="https://www.facebook.com/KINGPACKGROUP/" target="_blank"><i class="ion-social-facebook"></i></a>
 						</li>
 						<li class="list-inline-item">
-							<a href="https://instagram.com/download/?r=2845772818"><i
+							<a href="https://instagram.com/download/?r=2845772818" target="_blank"><i
 									class="ion-social-instagram"></i></a>
 						</li>
 					</ul>
