--- a/include/footer.html
+++ b/include/footer.html
@@ -103,7 +103,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="text-center">
-					&copy; Copyright Reserved to <a href="#">Kingpack</a>-2019
+					&copy; Copyright Reserved to <a href="http://www.kingpackgroup.com">Kingpack</a>-2020
 				</div>
 			</div>
 		</div>
