--- a/include/product-categories.html
+++ b/include/product-categories.html
@@ -17,7 +17,7 @@
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="paper-products.php">
-          <img class="img-fluid" src="images/categories/paper-cups.jpg" alt="Image">
+          <img class="img-fluid" src="images/categories/paper-cups.JPG" alt="Image">
         </a>
         <div class="media-body">
           <h4 class="media-heading"><a href="paper-products.php">Paper Products</a></h4>
@@ -65,7 +65,7 @@
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="black-base.php">
-          <img class="img-fluid" src="images/categories/black-base.jpg" alt="Image">
+          <img class="img-fluid" src="images/categories/black-base.JPG" alt="Image">
         </a>
         <div class="media-body">
           <h4 class="media-heading"><a href="black-base.php">Black Base Products</a></h4>
