--- a/include/footer.html
+++ b/include/footer.html
@@ -15,7 +15,7 @@
 					<h3 class="mb-4">Address</h3>
 					<ul class="list-inline footer-address">
 						<li class="list-inline-item">
-							<i class="ion-android-phone-portrait"></i><span>+973 33 69 65 01</span>
+							<i class="ion-android-phone-portrait"></i><span>+973 345 12 123</span>
 						</li>
 						<li class="list-inline-item">
 							<i class="ion-android-call"></i><span>+973 77 17 78 42</span>
