--- a/include/footer.html
+++ b/include/footer.html
@@ -88,7 +88,7 @@
 							<a href="https://www.facebook.com/KINGPACKGROUP/" target="_blank"><i class="ion-social-facebook"></i></a>
 						</li>
 						<li class="list-inline-item">
-							<a href="https://instagram.com/download/?r=2845772818" target="_blank"><i
+							<a href="https://instagram.com/kingpack_bahrain?igshid=rfvts501x37f" target="_blank"><i
 									class="ion-social-instagram"></i></a>
 						</li>
 					</ul>
