--- a/include/food-categories.html
+++ b/include/food-categories.html
@@ -3,7 +3,7 @@
     <!-- Widget Latest Posts -->
     <div class="widget widget-latest-post p-4 mb-4">
       <h3 class="widget-title mb-3 pb-4">Our Food Catalogue</h3>
-      <div class="media mb-3">
+      <!-- <div class="media mb-3">
         <a class="pull-left mr-4 media-object " href="shelf-range-super-market.php">
           <img class="img-fluid" src="images/food-categories/apple.jpg" alt="Image">
         </a>
@@ -13,7 +13,7 @@
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="cipsas-nuts.php">
@@ -26,8 +26,19 @@
           </div>
         </div>
       </div>
-
       <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/pure-assam-tea.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="./food.php">Pure Assam Tea</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/frooti.jpg" alt="Image">
         </a>
@@ -37,9 +48,9 @@
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="media mb-3">
+      <!-- <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/kara-coco.jpg" alt="Image">
         </a>
@@ -61,9 +72,9 @@
             <i class="ion-ios-cart"></i> 3 Categories
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="media mb-3">
+      <!-- <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="danima-cookies.php">
           <img class="img-fluid" src="images/food-categories/danima-cookies.jpg" alt="Image">
         </a>
@@ -85,9 +96,9 @@
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="media mb-3">
+      <!-- <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="food.php">
           <img class="img-fluid" src="images/food-categories/pop-popcorn.jpg" alt="Image">
         </a>
@@ -109,7 +120,7 @@
             <i class="ion-ios-cart"></i> 7 Categories
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="food.php">
@@ -129,7 +140,7 @@
         <div class="media-body">
           <h4 class="media-heading"><a href="monin.php">Monin Syrup</a></h4>
           <div class="post-meta">
-            <i class="ion-ios-cart"></i> 5 Categories
+            <i class="ion-ios-cart"></i> 4 Categories
           </div>
         </div>
       </div>
