--- a/include/food-footer.html
+++ b/include/food-footer.html
@@ -83,7 +83,7 @@
                                     class="ion-social-facebook"></i></a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://instagram.com/download/?r=2845772818"><i
+                            <a href="https://instagram.com/kingpack_bahrain?igshid=rfvts501x37f"><i
                                     class="ion-social-instagram"></i></a>
                         </li>
                     </ul>
