--- a/include/food-categories.html
+++ b/include/food-categories.html
@@ -3,17 +3,17 @@
     <!-- Widget Latest Posts -->
     <div class="widget widget-latest-post p-4 mb-4">
       <h3 class="widget-title mb-3 pb-4">Our Food Catalogue</h3>
-      <!-- <div class="media mb-3">
-        <a class="pull-left mr-4 media-object " href="shelf-range-super-market.php">
-          <img class="img-fluid" src="images/food-categories/apple.jpg" alt="Image">
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object " href="samaver-tea.php">
+          <img class="img-fluid" src="images/food-categories/samver-tea.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="unikai-juice.php">Unikai Juice</a></h4>
+          <h4 class="media-heading"><a href="samaver-tea.php">Samver Tea</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
         </div>
-      </div> -->
+      </div>
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="cipsas-nuts.php">
@@ -38,72 +38,12 @@
         </div>
       </div>
 
-      <!-- <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
-          <img class="img-fluid" src="images/food-categories/frooti.jpg" alt="Image">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Frooti</a></h4>
-          <div class="post-meta">
-            <i class="ion-ios-cart"></i> 5 Categories
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
-          <img class="img-fluid" src="images/food-categories/kara-coco.jpg" alt="Image">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Kara Coco</a></h4>
-          <div class="post-meta">
-            <i class="ion-ios-cart"></i> 5 Categories
-          </div>
-        </div>
-      </div>
-
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
-          <img class="img-fluid" src="images/food-categories/appy-fizz.jpg" alt="Image">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/karkadi-tea.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Appy Fizz</a></h4>
-          <div class="post-meta">
-            <i class="ion-ios-cart"></i> 3 Categories
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="danima-cookies.php">
-          <img class="img-fluid" src="images/food-categories/danima-cookies.jpg" alt="Image">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="danima-cookies.php">Danima Cookies</a></h4>
-          <div class="post-meta">
-            <i class="ion-ios-cart"></i> 5 Categories
-          </div>
-        </div>
-      </div>
-
-      <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="lacasa-dulcinea.php">
-          <img class="img-fluid" src="images/food-categories/lacasa.jpg" alt="Image">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="lacasa-dulcinea.php">Lacasa Chocolate</a></h4>
-          <div class="post-meta">
-            <i class="ion-ios-cart"></i> 4 Categories
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
-          <img class="img-fluid" src="images/food-categories/pop-popcorn.jpg" alt="Image">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Pop Smile Popcorn</a></h4>
+          <h4 class="media-heading"><a href="./food.php">Karkadi</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -111,16 +51,76 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
-          <img class="img-fluid" src="images/food-categories/euro-chips.jpg" alt="Image">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/sahlab.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Euro Chips</a></h4>
+          <h4 class="media-heading"><a href="./food.php">Sahlab</a></h4>
           <div class="post-meta">
-            <i class="ion-ios-cart"></i> 7 Categories
+            <i class="ion-ios-cart"></i> 1 Categories
           </div>
         </div>
-      </div> -->
+      </div>
+
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="badam-drink.php">
+          <img class="img-fluid" src="images/food-categories/badam-powder.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="badam-drink.php">Badam Drink</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
+
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/jannaty.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="./food.php">Jannaty</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
+
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/zinger-mix.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="./food.php">Zinger Mix</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
+
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/cardamom.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="./food.php">Cardamom</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
+
+      <div class="media mb-3">
+        <a class="pull-left mr-4 media-object" href="./food.php">
+          <img class="img-fluid" src="images/food-categories/ginger-mix.jpg" alt="Image">
+        </a>
+        <div class="media-body">
+          <h4 class="media-heading"><a href="food.php">Ginger Powder</a></h4>
+          <div class="post-meta">
+            <i class="ion-ios-cart"></i> 1 Categories
+          </div>
+        </div>
+      </div>
 
       <div class="media mb-3">
         <a class="pull-left mr-4 media-object" href="food.php">
@@ -145,24 +145,5 @@
         </div>
       </div>
     </div>
-    
-<!-- End Latest Posts -->
-
-<!-- Widget Category -->
-<!-- <div class="widget widget-category p-4 mb-4">
-            <h4 class="widget-title mb-3 pb-4">Categories</h4>
-            <ul class="list-unstyled widget-category-list">
-              <li><a href="#"> <i class="ion-arrow-right-b"></i>Animals</a>
-              </li>
-              <li><a href="#"><i class="ion-arrow-right-b"></i>Landscape</a>
-              </li>
-              <li><a href="#"><i class="ion-arrow-right-b"></i>Portrait</a>
-              </li>
-              <li><a href="#"><i class="ion-arrow-right-b"></i>Wild Life</a>
-              </li>
-              <li><a href="#"><i class="ion-arrow-right-b"></i>Video</a>
-              </li>
-            </ul>
-          </div> End category  -->
 </aside>
 </div>
