--- a/include/food-categories.html
+++ b/include/food-categories.html
@@ -4,11 +4,11 @@
     <div class="widget widget-latest-post p-4 mb-4">
       <h3 class="widget-title mb-3 pb-4">Our Food Catalogue</h3>
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object " href="samaver-tea.php">
+        <a class="pull-left mr-4 media-object " href="samaver-tea">
           <img class="img-fluid" src="images/food-categories/samver-tea.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="samaver-tea.php">Samver Tea</a></h4>
+          <h4 class="media-heading"><a href="samaver-tea">Samver Tea</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
@@ -16,22 +16,22 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="cipsas-nuts.php">
+        <a class="pull-left mr-4 media-object" href="cipsas-nuts">
           <img class="img-fluid" src="images/food-categories/tefos.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="cipsas-nuts.php">Cipsas Nuts</a></h4>
+          <h4 class="media-heading"><a href="cipsas-nuts">Cipsas Nuts</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 8 Categories
           </div>
         </div>
       </div>
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/pure-assam-tea.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Pure Assam Tea</a></h4>
+          <h4 class="media-heading"><a href="./food">Pure Assam Tea</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -39,11 +39,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/karkadi-tea.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Karkadi</a></h4>
+          <h4 class="media-heading"><a href="./food">Karkadi</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -51,11 +51,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/sahlab.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Sahlab</a></h4>
+          <h4 class="media-heading"><a href="./food">Sahlab</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -63,11 +63,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="badam-drink.php">
+        <a class="pull-left mr-4 media-object" href="badam-drink">
           <img class="img-fluid" src="images/food-categories/badam-powder.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="badam-drink.php">Badam Drink</a></h4>
+          <h4 class="media-heading"><a href="badam-drink">Badam Drink</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
@@ -75,11 +75,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/jannaty.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Jannaty</a></h4>
+          <h4 class="media-heading"><a href="./food">Jannaty</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -87,11 +87,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/zinger-mix.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Zinger Mix</a></h4>
+          <h4 class="media-heading"><a href="./food">Zinger Mix</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -99,11 +99,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/cardamom.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="./food.php">Cardamom</a></h4>
+          <h4 class="media-heading"><a href="./food">Cardamom</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -111,11 +111,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="./food.php">
+        <a class="pull-left mr-4 media-object" href="./food">
           <img class="img-fluid" src="images/food-categories/ginger-mix.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Ginger Powder</a></h4>
+          <h4 class="media-heading"><a href="food">Ginger Powder</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -123,22 +123,22 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="food.php">
+        <a class="pull-left mr-4 media-object" href="food">
           <img class="img-fluid" src="images/food-categories/dry-cake.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="food.php">Dry Cake</a></h4>
+          <h4 class="media-heading"><a href="food">Dry Cake</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
         </div>
       </div>
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="monin.php">
+        <a class="pull-left mr-4 media-object" href="monin">
           <img class="img-fluid" src="images/food-categories/monin-syrup.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="monin.php">Monin Syrup</a></h4>
+          <h4 class="media-heading"><a href="monin">Monin Syrup</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
