--- a/include/food-footer.html
+++ b/include/food-footer.html
@@ -22,8 +22,9 @@
                             +973 35 63 14 88
                         </li>
                         <li class="list-inline-item">
-                            <i class="ion-email"></i>
+                            <i class="ion-email"></i><a href="mailto:food@kingpackgroup.com">
                             food@kingpackgroup.com
+                            </a>
                         </li>
                         <li class="list-inline-item">
                             <i class="ion-ios-location"></i>
@@ -67,9 +68,9 @@
                     <h3 class="mb-4">Company</h3>
 
                     <ul class="list-unstyled footer-menu mb-0">
-                        <li><a href="#">Term & Conditions </a></li>
+                        <!-- <li><a href="#">Term & Conditions </a></li>
 
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Privacy Policy</a></li> -->
 
                         <li><a href="#">Site Map </a></li>
                     </ul>
