--- a/include/menu.html
+++ b/include/menu.html
@@ -1,58 +1,58 @@
 <div class="collapse navbar-collapse" id="navbarsExample09">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item ">
-        <a class="nav-link home" href="index.php">Home <span class="sr-only"></span></a>
+        <a class="nav-link home" href="index">Home <span class="sr-only"></span></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link about" href="about.php">About<span class="sr-only"></span></a>
+        <a class="nav-link about" href="about">About<span class="sr-only"></span></a>
       </li>
       
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle products" href="products.php" id="dropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+        <a class="nav-link dropdown-toggle products" href="products" id="dropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
         <ul class="dropdown-menu" aria-labelledby="dropdown2">
-            <li><a class="dropdown-item shelf" href="shelf-range-super-market.php">Shelf Range | Super Market</a></li>
+            <li><a class="dropdown-item shelf" href="shelf-range-super-market">Shelf Range | Super Market</a></li>
             <li class="dropdown dropdown-submenu dropright">
-              <a class="dropdown-item dropdown-toggle paper" href="paper-products.php" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Paper Products</a>
+              <a class="dropdown-item dropdown-toggle paper" href="paper-products" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Paper Products</a>
               <ul class="dropdown-menu" aria-labelledby="dropdown3">
-                <li><a class="dropdown-item cups" href="paper-cups.php">Paper Cups</a></li>                        
-                <li><a class="dropdown-item ice-cream" href="ice-cream-cups.php">Icecream Cups</a></li>
-                <li><a class="dropdown-item bamboo" href="bamboo-wooden.php">Bamboo | Wooden Products</a></li>
-                <li><a class="dropdown-item popcorn" href="pop-corn-cake-cups.php">Popcorn | Cake Cups</a></li>
-                <li><a class="dropdown-item other" href="other-paper-products.php">Other Products</a></li>
+                <li><a class="dropdown-item cups" href="paper-cups">Paper Cups</a></li>                        
+                <li><a class="dropdown-item ice-cream" href="ice-cream-cups">Icecream Cups</a></li>
+                <li><a class="dropdown-item bamboo" href="bamboo-wooden">Bamboo | Wooden Products</a></li>
+                <li><a class="dropdown-item popcorn" href="pop-corn-cake-cups">Popcorn | Cake Cups</a></li>
+                <li><a class="dropdown-item other" href="other-paper-products">Other Products</a></li>
               </ul>
             </li>
            
-            <li class="nav-item"><a class="nav-link tissue" href="tissue-products.php">Tissue Products</a></li>
+            <li class="nav-item"><a class="nav-link tissue" href="tissue-products">Tissue Products</a></li>
             <li class="dropdown dropdown-submenu dropright">
-              <a class="dropdown-item dropdown-toggle alu" href="aluminium-products.php" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Aluminium Products</a>
+              <a class="dropdown-item dropdown-toggle alu" href="aluminium-products" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Aluminium Products</a>
               <ul class="dropdown-menu" aria-labelledby="dropdown3">
-                <li><a class="dropdown-item foil" href="aluminium-foil-cling-film.php">Aluminium Foil | Cling Films</a></li>                            
-                <li><a class="dropdown-item container" href="aluminium-containers.php">Aluminium Containers</a></li>                              
-                <li><a class="dropdown-item platter" href="aluminium-wrap-platter-pot.php">Aluminium Platter|Pots|Burger Foil</a></li>
+                <li><a class="dropdown-item foil" href="aluminium-foil-cling-film">Aluminium Foil | Cling Films</a></li>                            
+                <li><a class="dropdown-item container" href="aluminium-containers">Aluminium Containers</a></li>                              
+                <li><a class="dropdown-item platter" href="aluminium-wrap-platter-pot">Aluminium Platter|Pots|Burger Foil</a></li>
               </ul>
             </li>
             <li class="dropdown dropdown-submenu dropright">
-                <a class="dropdown-item dropdown-toggle plastic" href="plastic-products.php" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plastic Products</a>
+                <a class="dropdown-item dropdown-toggle plastic" href="plastic-products" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plastic Products</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown3">
-                  <li><a class="dropdown-item pla-cups" href="plastic-pet-cups-straw.php">Plastic Cups|Pet Cups|Straw</a></li>
-                  <li><a class="dropdown-item tubs" href="plastic-tubs-trays-microwave.php">Plastic Tubs|Plates|Microwave</a></li> 
-                  <li><a class="dropdown-item cutlery" href="plastic-cutlery.php">Cutlery</a></li> 
-                  <li><a class="dropdown-item salad" href="plastic-salad-container.php">Clear Salad Container </a></li> 
-                  <li><a class="dropdown-item roll" href="plastic-bags-veg-rolls.php">Plastic Bags|Veg Roll</a></li> 
-                  <li><a class="dropdown-item tray" href="plastic-egg-tray-cake-cup-holder.php">Egg Tray|Cake|Cup Holder</a></li>                            
+                  <li><a class="dropdown-item pla-cups" href="plastic-pet-cups-straw">Plastic Cups|Pet Cups|Straw</a></li>
+                  <li><a class="dropdown-item tubs" href="plastic-tubs-trays-microwave">Plastic Tubs|Plates|Microwave</a></li> 
+                  <li><a class="dropdown-item cutlery" href="plastic-cutlery">Cutlery</a></li> 
+                  <li><a class="dropdown-item salad" href="plastic-salad-container">Clear Salad Container </a></li> 
+                  <li><a class="dropdown-item roll" href="plastic-bags-veg-rolls">Plastic Bags|Veg Roll</a></li> 
+                  <li><a class="dropdown-item tray" href="plastic-egg-tray-cake-cup-holder">Egg Tray|Cake|Cup Holder</a></li>                            
                 </ul>
               </li>     
-            <li><a class="dropdown-item base" href="black-base.php">Black Base Products</a></li>                          
-            <li><a class="dropdown-item foam" href="foam-products.php">Foam Products</a></li>                        
-            <li><a class="dropdown-item hygiene" href="hygiene-products.php">Hygiene Products</a></li>
-            <li><a class="dropdown-item cleaning" href="cleaning-products.php">Cleaning Products</a></li>                                               
+            <li><a class="dropdown-item base" href="black-base">Black Base Products</a></li>                          
+            <li><a class="dropdown-item foam" href="foam-products">Foam Products</a></li>                        
+            <li><a class="dropdown-item hygiene" href="hygiene-products">Hygiene Products</a></li>
+            <li><a class="dropdown-item cleaning" href="cleaning-products">Cleaning Products</a></li>                                               
           </ul>
       </li>
       <li class="nav-item ">
-          <a class="nav-link food" href="food.php">Food<span class="sr-only"></span></a>
+          <a class="nav-link food" href="food">Food<span class="sr-only"></span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link contacts" href="contact.php">Contacts<span class="sr-only"></span></a>
+          <a class="nav-link contacts" href="contact">Contacts<span class="sr-only"></span></a>
         </li>
     </ul>			                
   </div>
