--- a/include/footer.html
+++ b/include/footer.html
@@ -24,12 +24,14 @@
 							<i class="ion-social-whatsapp"></i><span>+973 34 57 58 59</span>
 						</li>
 						<li class="list-inline-item">
-							<i class="ion-email"></i>
+							<i class="ion-email"></i><a href="mailto:sales@kingpackgroup.com">
 							sales@kingpackgroup.com
+							</a>
 						</li>
 						<li class="list-inline-item">
-							<i class="ion-email"></i>
+							<i class="ion-email"></i><a href="mailto:info@kingpackgroup.com">
 							info@kingpackgroup.com
+						</a>
 						</li>
 						<li class="list-inline-item">
 							<i class="ion-ios-location"></i>
@@ -46,23 +48,23 @@
 					<h3 class="mb-4">Quick Links</h3>
 					<ul class="list-unstyled footer-menu mb-0">
 						<li>
-							<a href="index.php"><i class="ion-arrow-right-b"></i>Home</a>
+							<a href="index"><i class="ion-arrow-right-b"></i>Home</a>
 						</li>
 
 						<li>
-							<a href="about.php"><i class="ion-arrow-right-b"></i>About Us</a>
+							<a href="about"><i class="ion-arrow-right-b"></i>About Us</a>
 						</li>
 
 						<li>
-							<a href="products.php"><i class="ion-arrow-right-b"></i>Product</a>
+							<a href="products"><i class="ion-arrow-right-b"></i>Product</a>
 						</li>
 
 						<li>
-							<a href="food.php"><i class="ion-arrow-right-b"></i>Food</a>
+							<a href="food"><i class="ion-arrow-right-b"></i>Food</a>
 						</li>
 
 						<li>
-							<a href="contact.php"><i class="ion-arrow-right-b"></i>Contact</a>
+							<a href="contact"><i class="ion-arrow-right-b"></i>Contact</a>
 						</li>
 
 					</ul>
@@ -73,9 +75,9 @@
 					<h3 class="mb-4">Company</h3>
 
 					<ul class="list-unstyled footer-menu mb-0">
-						<li><a href="#">Term & Conditions </a></li>
+						<!-- <li><a href="#">Term & Conditions </a></li>
 
-						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Privacy Policy</a></li> -->
 
 						<li><a href="#">Site Map </a></li>
 					</ul>
