--- a/include/product-categories.html
+++ b/include/product-categories.html
@@ -4,11 +4,11 @@
     <div class="widget widget-latest-post p-4 mb-4">
       <h3 class="widget-title mb-3 pb-4">Our Product Catalogue</h3>
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object " href="shelf-range-super-market.php">
+        <a class="pull-left mr-4 media-object " href="shelf-range-super-market">
           <img class="img-fluid" src="images/categories/shelf.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="shelf-range-super-market.php">Shelf Range | Super Market</a></h4>
+          <h4 class="media-heading"><a href="shelf-range-super-market">Shelf Range | Super Market</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 6 Categories
           </div>
@@ -16,11 +16,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="paper-products.php">
+        <a class="pull-left mr-4 media-object" href="paper-products">
           <img class="img-fluid" src="images/categories/paper-cups.JPG" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="paper-products.php">Paper Products</a></h4>
+          <h4 class="media-heading"><a href="paper-products">Paper Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
@@ -28,11 +28,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="tissue-products.php">
+        <a class="pull-left mr-4 media-object" href="tissue-products">
           <img class="img-fluid" src="images/categories/toilet-roll.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="tissue-products.php">Tissue Products</a></h4>
+          <h4 class="media-heading"><a href="tissue-products">Tissue Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
@@ -40,11 +40,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="aluminium-products.php">
+        <a class="pull-left mr-4 media-object" href="aluminium-products">
           <img class="img-fluid" src="images/categories/alu-thumb.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="aluminium-products.php">Aluminium Containers</a></h4>
+          <h4 class="media-heading"><a href="aluminium-products">Aluminium Containers</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 3 Categories
           </div>
@@ -52,11 +52,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="plastic-products.php">
+        <a class="pull-left mr-4 media-object" href="plastic-products">
           <img class="img-fluid" src="images/categories/plastic.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="plastic-products.php">Plastic Products</a></h4>
+          <h4 class="media-heading"><a href="plastic-products">Plastic Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 5 Categories
           </div>
@@ -64,11 +64,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="black-base.php">
+        <a class="pull-left mr-4 media-object" href="black-base">
           <img class="img-fluid" src="images/categories/black-base.JPG" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="black-base.php">Black Base Products</a></h4>
+          <h4 class="media-heading"><a href="black-base">Black Base Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 4 Categories
           </div>
@@ -76,11 +76,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="foam-products.php">
+        <a class="pull-left mr-4 media-object" href="foam-products">
           <img class="img-fluid" src="images/categories/foam-thumb.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="foam-products.php">Foam Products</a></h4>
+          <h4 class="media-heading"><a href="foam-products">Foam Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 1 Categories
           </div>
@@ -88,11 +88,11 @@
       </div>
 
       <div class="media mb-3">
-        <a class="pull-left mr-4 media-object" href="hygiene-products.php">
+        <a class="pull-left mr-4 media-object" href="hygiene-products">
           <img class="img-fluid" src="images/categories/hygeine.jpg" alt="Image">
         </a>
         <div class="media-body">
-          <h4 class="media-heading"><a href="hygiene-products.php">Hygiene Products</a></h4>
+          <h4 class="media-heading"><a href="hygiene-products">Hygiene Products</a></h4>
           <div class="post-meta">
             <i class="ion-ios-cart"></i> 7 Categories
           </div>
@@ -100,11 +100,11 @@
       </div>
 
       <div class="media mb-3">
-          <a class="pull-left mr-4 media-object" href="cleaning-products.php">
+          <a class="pull-left mr-4 media-object" href="cleaning-products">
             <img class="img-fluid" src="images/categories/cleaning.jpg" alt="Image">
           </a>
           <div class="media-body">
-            <h4 class="media-heading"><a href="cleaning-products.php">Cleaning Products</a></h4>
+            <h4 class="media-heading"><a href="cleaning-products">Cleaning Products</a></h4>
             <div class="post-meta">
               <i class="ion-ios-cart"></i> 5 Categories
             </div>
