--- a/include/menu.html
+++ b/include/menu.html
@@ -52,7 +52,7 @@
           <a class="nav-link food" href="food">Food<span class="sr-only"></span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link contacts" href="contact">Contacts<span class="sr-only"></span></a>
+          <a class="nav-link contacts" href="contact-us">Contacts<span class="sr-only"></span></a>
         </li>
     </ul>			                
   </div>
