--- a/include/footer.html
+++ b/include/footer.html
@@ -64,7 +64,7 @@
 						</li>
 
 						<li>
-							<a href="contact"><i class="ion-arrow-right-b"></i>Contact</a>
+							<a href="reach-us"><i class="ion-arrow-right-b"></i>Contact</a>
 						</li>
 
 					</ul>
