--- a/include/food-footer.html
+++ b/include/food-footer.html
@@ -29,9 +29,10 @@
                         <li class="list-inline-item">
                             <i class="ion-ios-location"></i>
                             Head Office<br />
-                            <span style="padding-left: 23px;">No.839, Road No.2617</span><br />
-                            <span style="padding-left: 23px;">No. 626, Al Akar Al Gharab</span><br />
-                            <span style="padding-left: 23px;">Kingdom of Bahrin</span>
+                            <span style="padding-left: 23px;">Building No. 975, Road No. 5218</span><br />
+                            <span style="padding-left: 23px;">Block No. 952</span><br />
+                            <span style="padding-left: 23px;">Ras Zuwayed(ALBA AREA)</span><br />
+                            <span style="padding-left: 23px;">Kingdom of Bahrain</span>
                         </li>
                     </ul>
                 </div>
@@ -99,7 +100,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    &copy; Copyright Reserved to <a href="#">Kingpack</a>-2019
+                    &copy; Copyright Reserved to <a href="#">Kingpack</a>-2021
                 </div>
             </div>
         </div>
